# forestrunner-cpp

./: .gitignore  CMakeLists.txt  bootstrap.sh  bootstrap_d.sh  bootstrap_dbg.sh  bootstrap_r.sh  common.mk  doxy.config.in  ios.mk  ios_device.mk  ios_simulator.mk
ceed/animations/: ForestRunner.xml  fly.xml
ceed/imagesets/: ForestRunner.imageset  GlossySerpent.imageset  GlossySerpentCursors.imageset
ceed/layouts/: advanced.layout  agreement.layout  countdown1.layout  countdown2.layout  countdown3.layout  crash.layout  highscore.layout  initializing.layout  paused.layout  running.layout
ceed/looknfeel/: GlossySerpent.looknfeel  TaharezLookWidgetAliases.scheme
ceed/schemes/: GlossySerpent.scheme
cmake/Modules/: FindCEGUI.cmake  FindiOSSDK.cmake  old_FindOGRE.cmake
docs/pages/: mainpage.h
fonts/: DejaVuSans.fontdef
gui/: textures_960_640.ods
ios/: Entitlements.xcent  iPhoneSimulator.plist  ogre.cfg  resources.cfg
materials/: forestrunner.material
meshes/: aircraft.mesh.xml  aircraft_outline.mesh.xml
overlays/: forestrunner.overlay
resources/: Initialize.sql
resources/ceed/animations/: ForestRunner.xml
resources/ceed/fonts/: FreeMono-10.font  FreeMono-12.font
resources/ceed/imagesets/: ForestRunner.imageset  GlossySerpentCursors.imageset
resources/ceed/layouts/: advanced.layout  countdown1.layout  crash.layout  highscore.layout  initializing.layout  paused.layout  running.layout
resources/ceed/looknfeel/: GlossySerpent.looknfeel  TaharezLook.looknfeel  TaharezLookWidgets.scheme
resources/ceed/schemes/: GlossySerpent.scheme
resources/config/desktop/: plugins.cfg.in  resources.cfg.in
resources/config/ios/: ogre.cfg  plugins.cfg  resources.cfg
resources/materials/: forestrunner.material
resources/meshes/: aircraft.blend
scripts/: makePrintf.pl
src/: AircraftMesh.cpp  AircraftMesh.h  Application.cpp  Application.h  CMakeLists.base  CMakeLists.ios  CMakeLists.txt  IOSApplication.cpp  IOSApplication.h  MeshBuilder.cpp  MeshBuilder.h  main.cpp  ogre.cfg.in  plugins.cfg  resources.cfg  resources.cfg.in
src/BasicTutorial7/: BasicTutorial7.cpp  BasicTutorial7.h  CMakeLists.txt  plugins.cfg
src/TutorialFramework/: BaseApplication.cpp
src/app/: Application.h  linux.cpp  linux.h
src/forestrunner/: Application.cpp  Application.h  DesktopApplication.cpp  DesktopApplication.h  keys.cpp  keys.h
src/forestrunner/datastore/: BaseStore.cpp  BaseStore.h  DataStore.cpp  DataStore.h  GlobalHighScoreRow.cpp  GlobalHighScoreRow.h  Map.cpp  Map.h  UserHighScoreRow.cpp  UserHighScoreRow.h
src/forestrunner/desktop/: Application.cpp  Application.h  DataStore.cpp  DataStore.h
src/forestrunner/game/: Dispatcher.h  StateGraph.cpp  StateGraph.h
src/forestrunner/ios/: AppInterface.cpp  AppInterface.h  Application.cpp  Application.h  InputHandler.cpp  InputHandler.h
src/forestrunner/ios/objc/: ForestRunner_AdvScene.h  ForestRunner_AdvScene.mm  ForestRunner_AppDelegate.h  ForestRunner_AppDelegate.m  ForestRunner_EAGLView.h  ForestRunner_EAGLView.mm  ForestRunner_InitScene.h  ForestRunner_InitScene.m  ForestRunner_LoadingScene.h  ForestRunner_LoadingScene.mm  ForestRunner_NavCell.h  ForestRunner_NavCell.m  ForestRunner_NickScene.h  ForestRunner_NickScene.mm  ForestRunner_PlayScene.h  ForestRunner_PlayScene.mm  ForestRunner_PrefScene.h  ForestRunner_PrefScene.mm  ForestRunner_ScoreCell.h  ForestRunner_ScoreCell.m  ForestRunner_ScoreTable.h  ForestRunner_ScoreTable.mm  forestrunner_ios-Info.plist  forestrunner_ios-Prefix.pch  main.m
src/forestrunner/util/: Printf.cpp  Printf.h  Printf.hpp
src/game/: CEGUIDummyLogger.cpp  CEGUIDummyLogger.h  ForestPatch.cpp  ForestPatch.h  Game.cpp  Game.h  GameState.h  InitCycle.cpp  InitCycle.h  KeyboardGame.cpp  KeyboardGame.h  StateGraph.cpp  StateGraph.h
src/gui/: GuiManager.cpp  GuiManager.h  Screen.cpp  Screen.h  Transition.cpp  Transition.h
src/gui/screens/: AdvancedScreen.cpp  AdvancedScreen.h  AgreementScreen.cpp  AgreementScreen.h  CountdownScreen.cpp  CountdownScreen.h  CrashScreen.cpp  CrashScreen.h  HighScoreScreen.cpp  HighScoreScreen.h  InitScreen.cpp  InitScreen.h  PauseScreen.cpp  PauseScreen.h  RunningScreen.cpp  RunningScreen.h
src/ios/: AppDelegate.h  ForestRunner-Prefix.pch  IOSApplication.h  OgreDemoApp.cpp  OgreDemoApp.h  OgreFramework.h  main.mm
src/ios/config/: iPhoneOS.plist  ogre.cfg  plugins.cfg
src/stategraph/: Button.cpp  Button.h  Manager.cpp  Manager.h  State.cpp  State.h  TextEntry.cpp  TextEntry.h
src/stategraph/states/: AdvanedSettings.cpp  AdvanedSettings.h  Agreement.cpp  Agreement.h  AnimatedPanel.cpp  AnimatedPanel.h  Countdown.cpp  Countdown.h  Crash.cpp  Crash.h  GameMenu.cpp  GameMenu.h  Goodbye.cpp  Goodbye.h  HighScores.cpp  HighScores.h  InitGame.cpp  InitGame.h  Initialize.cpp  Initialize.h  PauseMenu.cpp  PauseMenu.h  PickNick.cpp  PickNick.h  Play.cpp  Play.h
xcode/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
